--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,27 @@
     <title>dreamysin's site!!</title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+        <div id="ct">
+        <div id="header">
+
+        </div>
+        <div id="content">
+            <div id="left">
+                <div id="navi">
+
+                </div>
+                <div id="box">
+
+                </div>
+            </div>
+            <div id="right">
+
+
+            </div>
+        </div>
+    </div>
+    </div>
     <div id="doll">
         <img src="img/avi.png" class="pgdoll">
     </div>
