Finished cat page
Finished cat page and added home to nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,15 @@
                   <div class = "u01" ></div>
                 </div> <div class = "box-center" >
                    <div class = "box-inner" > 
-                    <button class="nav"><img src="img/ns.gif">ABOUT</button>
-                    <button class="nav"><img src="img/ns.gif">CATS</button>
-                    <button class="nav"><img src="img/ns.gif">DIARY</button>
-                    <button class="nav"><img src="img/ns.gif">SCRAPBOOK</button>
-                    <button class="nav"><img src="img/ns.gif">CRAFTS</button>
-                    <button class="nav"><img src="img/ns.gif">ART</button>
-                    <button class="nav"><img src="img/ns.gif">SPELLS</button>
-                    <button class="nav"><img src="img/ns.gif">PIXEL DOLLS</button>
+                    <a href="index.html"><button class="nav"><img src="img/ns.gif">HOME</button></a>
+                    <a href="#"><button class="nav"><img src="img/ns.gif">ABOUT</button></a>
+                    <a href="cats.html"><button class="nav"><img src="img/ns.gif">CATS</button></a>
+                    <a href="#"><button class="nav"><img src="img/ns.gif">DIARY</button></a>
+                    <a href="#"><button class="nav"><img src="img/ns.gif">SCRAPBOOK</button></a>
+                    <a href="#"><button class="nav"><img src="img/ns.gif">CRAFTS</button></a>
+                    <a href="#"><button class="nav"><img src="img/ns.gif">ART</button></a>
+                    <a href="#"><button class="nav"><img src="img/ns.gif">SPELLS</button></a>
+                    <a href="#"><button class="nav"><img src="img/ns.gif">PIXEL DOLLS</button></a>
                     
                     
                 </div> 
@@ -67,6 +68,9 @@
                   <p><img src="https://64.media.tumblr.com/fedb5c4ea9aa4f221315c50f6cf20e8d/aceec1f627aba7a1-66/s75x75_c1/a5ce1a15857101ae1c09059a5735abfab4f53171.gifv"> Updates! <img src="https://64.media.tumblr.com/fedb5c4ea9aa4f221315c50f6cf20e8d/aceec1f627aba7a1-66/s75x75_c1/a5ce1a15857101ae1c09059a5735abfab4f53171.gifv"> </p>
                 </div>
                 <div id="bottom">
+                  <p>4/27/25</p>
+                  <p>Finished Cats page</p>
+
                   <p>4/16/25</p>
                   <p>Finished Home page</p>
 
